--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,7 @@
 <h1>Welcome!</h1>
 <h2>If you tell me your name, I can say hi!</h2>
 
-<label 
+<form method="POST" action="/greet">
+  <label for="name">Name:</label>
+  <input type="text" na
+</form>
