--- a/views/index.erb
+++ b/views/index.erb
@@ -3,5 +3,6 @@
 
 <form method="POST" action="/greet">
   <label for="name">Name:</label>
-  <input type="text" na
+  <input type="text" name="name"></br>
+  <input type="submit" value="Submit">
 </form>
